Change service request